Implement visitor list sorting in UI
The commit introduces a custom sorter for the visitor list. It incorporates the new sorter, `VisitorSorter`, in the `StatisticViewModel` and changes the data binding in `StatisticWindow.xaml` from `Visitors` to `VisitorView`, which is now sorted. This ensures that the visitor list is now displayed sorted by creation date.

--- a/src/Statistic.Wpf/View/StatisticWindow.xaml
+++ b/src/Statistic.Wpf/View/StatisticWindow.xaml
@@ -193,7 +193,7 @@
                 IsReadOnly="True"
                 SelectionMode="Single"
                 IsManipulationEnabled="False"
-                ItemsSource="{Binding Visitors}">
+                ItemsSource="{Binding VisitorView}">
                 
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding CreateDate, StringFormat=HH:mm:ss}" 
